--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="stylesheet" href="./css/common.css">
+  <link rel="stylesheet" href="./css/main.css">
   <title>Web studio</title>
 </head>
 <body>
   <header>   
     <nav>
-      <a href="/" lang="en"><span>Web</span>Studio</a>
+      <a href="./index.html" lang="en"><span>Web</span>Studio</a>
       <ul>
-        <li><a href="/">Студія</a></li>
-        <li><a href="">Портфоліо</a></li>
+        <li><a href="./index.html">Студія</a></li>
+        <li><a href="./portfolio.html">Портфоліо</a></li>
         <li><a href="">Контакти</a></li>
       </ul>
     </nav>
