--- a/index.html
+++ b/index.html
@@ -4,107 +4,113 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <link rel="stylesheet" href="./css/common.css">
-  <link rel="stylesheet" href="./css/main.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+    rel="stylesheet">
   <title>Web studio</title>
+  
+  <link rel="stylesheet" href="./css/styles.css">
+  
+  
+    
 </head>
 <body>
-  <header>   
-    <nav>
-      <a href="./index.html" lang="en"><span>Web</span>Studio</a>
-      <ul>
-        <li><a href="./index.html">Студія</a></li>
-        <li><a href="./portfolio.html">Портфоліо</a></li>
-        <li><a href="">Контакти</a></li>
+  <header class="header">   
+    <nav class="header-navigation">
+      <a href="./index.html" lang="en" class="header-logo"><span class="logo-web">Web</span>Studio</a>
+      <ul class="header-list list">
+        <li class="header-item"><a href="./index.html" class="list"><span class="header-item-studio">Студія</span></a></li>
+        <li class="header-item"><a href="./portfolio.html" class="list">Портфоліо</a></li>
+        <li class="header-item"><a href="" class="list">Контакти</a></li>
       </ul>
     </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="header-contact-list list">
+        <li class="header-contact"><a href="mailto:info@devstudio.com" class="list">info@devstudio.com</a></li>
+        <li class="header-contact"><a href="tel:+380961111111" class="list">+38 096 111 11 11</a></li>
       </ul>  
   </header>
 
   <main>
     <!-- Hero -->
-    <section>
-      <h1>Ефективні рішення для вашого бізнесу</h1>
-      <button type="button">Замовити послугу</button>
+    <section class="hero">
+      <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+      <button type="button" class="hero-button">Замовити послугу</button>
     </section>
 
     <!-- Advantages -->
-    <section>
+    <section class="advantages">
       <!-- h2 Заховати в CSS -->
-      <h2>Переваги нашої компанії</h2> 
-      <ul>
-        <li>
-          <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-          <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+      <h2 class="visually-hidden">Переваги нашої компанії</h2> 
+      <ul class="advantages-item">
+        <li class="advantages-list">
+          <h3 class="advantages-heads">УВАГА ДО ДЕТАЛЕЙ</h3>
+          <p class="advantages-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
         </li>
-        <li>
-          <h3>ПУНКТУАЛЬНІСТЬ</h3>
-          <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+        <li class="advantages-list">
+          <h3 class="advantages-heads">ПУНКТУАЛЬНІСТЬ</h3>
+          <p class="advantages-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
         </li>
-        <li>
-          <h3>ПЛАНУВАННЯ</h3>
-          <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+        <li class="advantages-list">
+          <h3 class="advantages-heads">ПЛАНУВАННЯ</h3>
+          <p class="advantages-text">Так само консультація з широким активом значною мірою зумовлює.</p>
         </li>
-        <li>
-          <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-          <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+        <li class="advantages-list">
+          <h3 class="advantages-heads">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+          <p class="advantages-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
         </li>
       </ul> 
     </section>
 
     <!-- Чим ми займаємося -->
-    <section>
-      <h2>Чим ми займаємося</h2>
-      <ul>
-        <li><img src="./img/чим-ми-займаємося1.jpg" alt="приклад роботи номер один" width="370" height="294"></li>
-        <li><img src="./img/чим-ми-займаємося2.jpg" alt="приклад роботи номер два" width="370" height="294"></li>
-        <li><img src="./img/чим-ми-займаємося3.jpg" alt="приклад роботи номер три" width="370" height="294"></li>
+    <section class="examples">
+      <h2 class="examples-title">Чим ми займаємося</h2>
+      <ul class="examples-item">
+        <li class="examples-list"><img src="./img/чим-ми-займаємося1.jpg" alt="приклад роботи номер один" width="370" height="294"></li>
+        <li class="examples-list"><img src="./img/чим-ми-займаємося2.jpg" alt="приклад роботи номер два" width="370" height="294"></li>
+        <li class="examples-list"><img src="./img/чим-ми-займаємося3.jpg" alt="приклад роботи номер три" width="370" height="294"></li>
       </ul>  
     </section>
 
     <!-- Наша команда -->
-    <section>
-      <h2>Наша команда</h2>
-      <ul>
-        <li>
+    <section class="team">
+      <h2 class="team-title">Наша команда</h2>
+      <ul class="team-item">
+        <li class="team-list">
           <img src="./img/photo-product-designer.jpg" alt="фото Ігор Дем&apos;яненко" width="270" height="260">
-          <h3>Ігор Дем'яненко</h3>
-          <p>Product Designer</p>
+          <h3 class="team-heads">Ігор Дем'яненко</h3>
+          <p class="team-position">Product Designer</p>
         </li>
-        <li>
+        <li class="team-list">
           <img src="./img/photo-frontend-developer.jpg" alt="фото Ольга Рєпіна" width="270" height="260">
-          <h3>Ольга Рєпіна</h3>
-          <p>Product Designer</p>
+          <h3 class="team-heads">Ольга Рєпіна</h3>
+          <p class="team-position">Product Designer</p>
         </li>
-        <li>
+        <li class="team-list">
           <img src="./img/photo-marketing-manager.jpg" alt="фото Микола Тарасов" width="270" height="260">
-          <h3>Микола Тарасов</h3>
-          <p>Marketing</p>
+          <h3 class="team-heads">Микола Тарасов</h3>
+          <p class="team-position">Marketing</p>
         </li>
-        <li>
+        <li class="team-list">
           <img src="./img/photo-ui-designer.jpg" alt="фото Михайло Єрмаков" width="270" height="260">
-          <h3>Михайло Єрмаков</h3>
-          <p>UI Designer</p>
+          <h3 class="team-heads">Михайло Єрмаков</h3>
+          <p class="team-position">UI Designer</p>
         </li>
       </ul>
     </section>
 
   </main>
 
-  <footer>
-    <a href="/" lang="en"> <span>Web</span>Studio</a>
-    <address>
-      <ul>
-        <li><a href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=uk">м. Київ, пр-т Лесі Українки, 26</a></li>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+  <footer class="footer">
+    <a href="/" lang="en" class="footer-logo"> <span class="logo-web">Web</span>Studio</a>
+    <address class="footer-address">
+      <ul class="footer-item">
+        <li class="footer-list"><a href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=uk" class="list"><span class="footer-list-address">м. Київ, пр-т Лесі Українки, 26</span></a></li>
+        <li class="footer-list"><a href="mailto:info@devstudio.com" class="list">info@devstudio.com</a></li>
+        <li class="footer-list"><a href="tel:+380961111111" class="list">+38 096 111 11 11</a></li>
       </ul>
     </address>
   </footer>
-  
+ 
 </body>
 </html>
