--- a/portfolio.html
+++ b/portfolio.html
@@ -5,43 +5,134 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="stylesheet" href="./css/common.css">
-    <link rel="stylesheet" href="./css/portfolio.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+    rel="stylesheet">
   <title>Portfolio</title>
+  
+  <link rel="stylesheet" href="./css/styles.css">
+   
+
+  
 </head>
 
 <body>
-  <header>
-    <nav>
-      <a href="./index.html" lang="en"><span>Web</span>Studio</a>
-      <ul>
-        <li><a href="./index.html">Студія</a></li>
-        <li><a href="./portfolio.html">Портфоліо</a></li>
-        <li><a href="">Контакти</a></li>
+  <header class="header">
+    <nav class="header-navigation">
+      <a href="./index.html" lang="en" class="header-logo"><span class="logo-web">Web</span>Studio</a>
+      <ul class="header-list list">
+        <li class="header-item"><a href="./index.html" class="list">Студія</a></li>
+        <li class="header-item"><a href="./portfolio.html" class="list"><span class="header-item-studio">Портфоліо</span></a></li>
+        <li class="header-item"><a href="" class="list">Контакти</a></li>
       </ul>
     </nav>
-    <ul>
-      <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-      <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+    <ul class="header-contact-list list">
+      <li class="header-contact"><a href="mailto:info@devstudio.com" class="list">info@devstudio.com</a></li>
+      <li class="header-contact"><a href="tel:+380961111111" class="list">+38 096 111 11 11</a></li>
     </ul>
   </header>
   
   <main>
+    <!-- Наші проекти -->
+    <section class="projects">
+      <!-- h1 hide in CSS -->
+      <h1 class="visually-hidden">Наші проекти</h1>
+      <ul class="projects-item">
+        <li class="projects-list"><button type="button" class="projects-list-button">Усі</button></li>
+        <li class="projects-list"><button type="button" class="projects-list-button">Веб-сайти</button></li>
+        <li class="projects-list"><button type="button" class="projects-list-button">Додатки</button></li>
+        <li class="projects-list"><button type="button" class="projects-list-button">Дизайн</button></li>
+        <li class="projects-list"><button type="button" class="projects-list-button">Маркетинг</button></li>
+      </ul>
 
+      <ul class="gallery">
+        <li class="gallery-list">
+          <a href="" class="gallery-link">
+            <img src="./img/tehnokriak.jpg" alt="Технокряк" width="370" height="294">
+            <h2 class="gallery-heads">Технокряк</h2>
+            <p class="gallery-type">Веб-сайт</p>
+          </a>
+        </li>
+
+        <li class="gallery-list">
+          <a href="" class="gallery-link">
+            <img src="/img/new orlean.jpg" alt="Постер New Orlean vs Golden Star" alt="Технокряк" width="370" height="294">
+            <h2 class="gallery-heads">Постер New Orlean vs Golden Star</h2>
+            <p class="gallery-type">Дизайн</p>
+          </a>
+        </li>
+
+        <li class="gallery-list">
+          <a href="" class="gallery-link">
+            <img src="./img/seafood.jpg" alt="Ресторан Seafood" width="370" height="294">
+            <h2 class="gallery-heads">Ресторан Seafood</h2>
+            <p class="gallery-type">Додаток</p>
+          </a>
+        </li>
+
+        <li class="gallery-list">
+          <a href="" class="gallery-link">
+            <img src="/img/prime.jpg" alt="Проєкт Prime" width="370" height="294">
+            <h2 class="gallery-heads">Проєкт Prime</h2>
+            <p class="gallery-type">Маркетинг</p>
+          </a>
+        </li>
+
+        <li class="gallery-list">
+          <a href="" class="gallery-link">
+            <img src="./img/boxes.jpg" alt="Проєкт Boxes" width="370" height="294">
+            <h2 class="gallery-heads">Проєкт Boxes</h2>
+            <p class="gallery-type">Додаток</p>
+          </a>
+        </li>
+
+        <li class="gallery-list">
+          <a href="" class="gallery-link">
+            <img src="./img/inspiration.jpg" alt="Inspiration has no Borders" width="370" height="294">
+            <h2 class="gallery-heads">Inspiration has no Borders</h2>
+            <p class="gallery-type">Веб-сайт</p>
+          </a>
+        </li>
+
+        <li class="gallery-list">
+          <a href="" class="gallery-link">
+            <img src="./img/limited edition.jpg" alt="Видання Limited Edition" width="370" height="294">
+            <h2 class="gallery-heads">Видання Limited Edition</h2>
+            <p class="gallery-type">Дизайн</p>
+          </a>       
+        </li>
+
+        <li class="gallery-list">
+          <a href="" class="gallery-link">
+            <img src="./img/lab.jpg" alt="Проєкт LAB" width="370" height="294">
+            <h2 class="gallery-heads">Проєкт LAB</h2>
+            <p class="gallery-type">Маркетинг</p>
+          </a>
+        </li>
+
+        <li class="gallery-list">
+          <a href="" class="gallery-link">
+            <img src="./img/growing business.jpg" alt="Growing Business" width="370" height="294">
+            <h2 class="gallery-heads">Growing Business</h2>
+            <p class="gallery-type">Додаток</p>
+          </a>        
+        </li>
+      </ul>
+    </section>
   </main>
 
-    <footer>
-      <a href="/" lang="en"> <span>Web</span>Studio</a>
-      <address>
-        <ul>
-          <li><a
-              href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=uk">м.
-              Київ, пр-т Лесі Українки, 26</a></li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
-      </address>
-    </footer>
+  <footer class="footer">
+    <a href="/" lang="en" class="footer-logo"> <span class="logo-web">Web</span>Studio</a>
+    <address class="footer-address">
+      <ul class="footer-item">
+        <li class="footer-list"><a
+            href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=uk"
+            class="list"><span class="footer-list-address">м. Київ, пр-т Лесі Українки, 26</span></a></li>
+        <li class="footer-list"><a href="mailto:info@devstudio.com" class="list">info@example.com</a></li>
+        <li class="footer-list"><a href="tel:+380961111111" class="list">+38 096 111 11 11</a></li>
+      </ul>
+    </address>
+  </footer>
 </body>
 </html>
