Дрібні правки портфоліо

--- a/portfolio.html
+++ b/portfolio.html
@@ -57,7 +57,7 @@
 
         <li class="gallery-list">
           <a href="" class="gallery-link">
-            <img src="/img/new orlean.jpg" alt="Постер New Orlean vs Golden Star" alt="Технокряк" width="370" height="294">
+            <img src="/img/new-orlean.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
             <h2 class="gallery-heads">Постер New Orlean vs Golden Star</h2>
             <p class="gallery-type">Дизайн</p>
           </a>
@@ -97,7 +97,7 @@
 
         <li class="gallery-list">
           <a href="" class="gallery-link">
-            <img src="./img/limited edition.jpg" alt="Видання Limited Edition" width="370" height="294">
+            <img src="./img/limited-edition.jpg" alt="Видання Limited Edition" width="370" height="294">
             <h2 class="gallery-heads">Видання Limited Edition</h2>
             <p class="gallery-type">Дизайн</p>
           </a>       
@@ -113,7 +113,7 @@
 
         <li class="gallery-list">
           <a href="" class="gallery-link">
-            <img src="./img/growing business.jpg" alt="Growing Business" width="370" height="294">
+            <img src="./img/growing-business.jpg" alt="Growing Business" width="370" height="294">
             <h2 class="gallery-heads">Growing Business</h2>
             <p class="gallery-type">Додаток</p>
           </a>        
