--- a/portfolio.html
+++ b/portfolio.html
@@ -57,7 +57,7 @@
 
         <li class="gallery-list">
           <a href="" class="gallery-link">
-            <img src="/img/new-orlean.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
+            <img src="./img/new-orlean.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
             <h2 class="gallery-heads">Постер New Orlean vs Golden Star</h2>
             <p class="gallery-type">Дизайн</p>
           </a>
@@ -73,7 +73,7 @@
 
         <li class="gallery-list">
           <a href="" class="gallery-link">
-            <img src="/img/prime.jpg" alt="Проєкт Prime" width="370" height="294">
+            <img src="./img/prime.jpg" alt="Проєкт Prime" width="370" height="294">
             <h2 class="gallery-heads">Проєкт Prime</h2>
             <p class="gallery-type">Маркетинг</p>
           </a>
