--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
     rel="stylesheet">
   <title>Portfolio</title>
   
@@ -129,7 +129,7 @@
         <li class="footer-list"><a
             href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=uk"
             class="list"><span class="footer-list-address">м. Київ, пр-т Лесі Українки, 26</span></a></li>
-        <li class="footer-list"><a href="mailto:info@devstudio.com" class="list">info@example.com</a></li>
+        <li class="footer-list"><a href="mailto:info@example.com" class="list">info@example.com</a></li>
         <li class="footer-list"><a href="tel:+380961111111" class="list">+38 096 111 11 11</a></li>
       </ul>
     </address>
