--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
     <section class="examples">
       <h2 class="examples-title">Чим ми займаємося</h2>
       <ul class="examples-item">
-        <li class="examples-list"><img src="./img/чим-ми-займаємося1.jpg" alt="приклад роботи номер один" width="370" height="294"></li>
-        <li class="examples-list"><img src="./img/чим-ми-займаємося2.jpg" alt="приклад роботи номер два" width="370" height="294"></li>
-        <li class="examples-list"><img src="./img/чим-ми-займаємося3.jpg" alt="приклад роботи номер три" width="370" height="294"></li>
+        <li class="examples-list"><img src="./img/what-we-do1.jpg" alt="приклад роботи номер один" width="370" height="294"></li>
+        <li class="examples-list"><img src="./img/what-we-do2.jpg" alt="приклад роботи номер два" width="370" height="294"></li>
+        <li class="examples-list"><img src="./img/what-we-do3.jpg" alt="приклад роботи номер три" width="370" height="294"></li>
       </ul>  
     </section>
 
