--- a/portfolio.html
+++ b/portfolio.html
@@ -123,7 +123,7 @@
   </main>
 
   <footer class="footer">
-    <a href="/" lang="en" class="footer-logo"> <span class="logo-web">Web</span>Studio</a>
+    <a href="./index.html" lang="en" class="footer-logo"> <span class="logo-web">Web</span>Studio</a>
     <address class="footer-address">
       <ul class="footer-item">
         <li class="footer-list"><a
